# esp32_iot

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/cpu_temp_sensor/: CMakeLists.txt  cpu_temp_sensor.c  cpu_temp_sensor.h
components/display/: CMakeLists.txt  bsp_err_check.h  display.c  display.h
components/gui_thermo_clock/: CMakeLists.txt  dseg7_classic_bold_60.c  dseg7_classic_bold_62.c  dseg7_classic_bold_80.c  dseg7_classic_bold_82.c  gui.c  gui.h  icon_humidity_in.c  icon_temperature_in.c  icon_temperature_out.c
components/hdc1080/: CMakeLists.txt  hdc1080.c  hdc1080.h
components/http_server/: CMakeLists.txt  http_server.c  http_server.h
components/mqtt_cmd/: CMakeLists.txt  mqtt_cmd.c  mqtt_cmd.h
components/nvs_utils/: CMakeLists.txt  nvs_utils.c  nvs_utils.h
components/ota/: ota.c  ota.h
components/sensors/: CMakeLists.txt  sensors.c  sensors.h
components/sht4x/: CMakeLists.txt  sht4x.c  sht4x.h
components/weather/: CMakeLists.txt  weather.c  weather.h
components/wifi/: CMakeLists.txt  Makefile  wifi.c  wifi.h
docs/JC3248W535EN/8-Burn operation/flash_download_tool_3.9.3/logs/: 4022D84C99A8.txt  4022D84C99CC.txt  4022D84C99D4.txt  4022D84CBA30.txt  4022D84CBB18.txt  4022D84F4CDC.txt  4022D84F8BCC.txt  4022D85491FC.txt  4022D854F924.txt  4022D8555A64.txt  4022D857DAF0.txt  4022D857DAFC.txt  4022D857DB24.txt  4022D857E238.txt  4022D857E2D4.txt  4022D857E324.txt  4022D857E39C.txt  4022D857EE78.txt  4022D857EE88.txt  4022D857EF44.txt  (+116 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.h
